--- a/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
+++ b/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
@@ -478,9 +478,8 @@ and (orientation: portrait) {
   position: absolute;
   top: 0;
   left: 0;
-  display: block;
   width: 100%;
-  min-height: 36px;
+  min-height: 56px;
   overflow-y: scroll;
   padding: 20px 0 0 10px;
   background-color: #ECECEC;
